Error in solving Nextcloud account address
I configured a Nextcloud account via Gnome online accounts. The account name is reported as EMAIL_ADDRESS@NEXTCLOUD_DOMAIN.
When I open evolution I get a yellow banner warning me about a sync error concerning my Nextcloud account. This is the warning I receive (italian l10n):
Connessione non riuscita a «EMAIL_ADDRESS@NEXTCLOUD_DOMAIN»
Errore nel risolvere «EMAIL_DOMAIN@NEXTCLOUD_DOMAIN»: Nome o servizio sconosciuto
Which roughly translates to: Connection to «EMAIL_ADDRESS@NEXTCLOUD_DOMAIN» failed. Cannot solve «EMAIL_DOMAIN@NEXTCLOUD_DOMAIN»: Name or service unknown
The issue I'm experiencing (other than the annyoing banner) is that neither Contacts or Calendars are synced, probably due to this error. That happens even though Calendar, Contacts and Files are properly flagged in Gnome Online Accounts.
I suppose the problem arises from the fact that the Nextcloud account name (for Gnome) contains two @
characters. The first one comes from the email address used to sing in Nextcloud and the second from the actual Nextcloud provider. The account name is then similar to foo@bar.com@nextcloud-foo.org
The expected behavior would be no banner and a working sync of those elements.
I want to also point out that the same issue (non working sync) happens with Calendar and Contacts apps.
Evolution version: 3.46.3 (3.46.3-1.fc37)